# briefpappe-rs

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  input.css  package-lock.json  package.json  tailwind.config.js
.github/workflows/: fly.yml
src/: app.rs  fileserv.rs  i18n.rs  lib.rs  main.rs  server_functions.rs  state.rs  types.rs
src/components/: collection_link.rs  footer.rs  header.rs  hero.rs  mod.rs  navigation.rs  theme_selector.rs
src/components/editor/: left_side_bar.rs  mod.rs  right_side_bar.rs
src/layouts/: app_layout.rs  editor_layout.rs  mod.rs
src/routes/: collection.rs  doc.rs  home.rs  mod.rs
style/: collection_link.sass  main.scss
